# LactChain

./: .gitignore.txt  README.md  pyproject.toml  requirements.txt
ARGO_WRAPPER/: API_caller.py  CustomLLM.py
classes/: README.md  agent.py  agent_interface.py  environment.py  lactchain.py  reward.py  state.py
lactchain/: base_train_critic.py  dist_train_critic.py  gather_data_critic.py  train_critic.py  train_simpo.py  utils.py
lactchain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lactchain/ARGO_WRAPPER/: ArgoLLM.py  CustomLLM.py
lactchain/classes/: base_lactchain.py  base_reward.py  base_state.py  lactchain.py  learning.py
lactchain/configs/: base_config.py
lactchain/datasets/: dpo_dataset.py
lactchain/distributed/: dist_critic_dataset.py  dist_critic_train.py  dist_utils.py
lactchain/environments/: grid_world.py
lactchain/models/: actor.py  critic.py  lightning_agent.py
lactchain/models/backends/: argo_wrapper.py  huggingface_backend.py  langchain_backend.py  vllm_backend.py
lactchain/preference_schemes/: simpo.py
lactchain/simpo/: dpo_collator.py  simpo_trainer.py
lactchain/train/: critic_train_lightning.py
langchain_agents/: config.py  langchain_generators.py
use_cases/: README.md  agent_examples.py
use_cases/crash_course/basic/: DQN.py  DQN_2.py  actor_critic.py  my_dqn.py
use_cases/mine/: custom_environment.py  environment.py  train.py
use_cases/mine/a2c/: actor_critic.py  configs.py  dataset.py  models.py  poolers.py  ppo_a2c.py
use_cases/mine/basic/: dataset.py  reinforce.py  train.py
use_cases/mine/lactchain/: actor.py  argo_wrapper.py  config.py  critic.py  dataset.py  dist_critic_train.py  dist_utils.py  environment.py  grid_world.py  huggingface_backend.py  lactchain_old.py  lactchains.py  langchain_backend.py  mistral.py  model.py  my_dpo_config.py  my_huggingface_backend.py  notes.md  requirements.txt  simpo_data_gather.py  simpo_trainer.py  train.py  train_critic.py  train_lactchain.py  train_simpo.py  vllm_backend.py
use_cases/mine/vision/: a2c.py  config.py  data.py  encoder.py  monte_12c.py  other_a2c.py  torch_a2c.py
use_cases/testcase/: CodeWorld.py  GridWorld-LLM-old.py  GridWorld-LLM.py  GridWorld.py  GridWorld_LLM.py  PolicyClassifier.py
